tests/baselines/reference/pathMappingBasedModuleResolution1_amd.errors.txt
c:/root/tsconfig.json(6,17): error TS5089: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?


==== c:/root/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "paths": {
                "*": [
                    "*",
                    "generated/*"
                    ~~~~~~~~~~~~~
!!! error TS5089: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
                ]
            }
        }
    }
    
==== c:/root/f1.ts (0 errors) ====
    export var x = 1;
    